--- a/styles/custom.css
+++ b/styles/custom.css
@@ -150,8 +150,8 @@ p {
 .profile_picture{
     position: fixed;
     z-index: 1;
-    height: 1px;
-    width: 1px;
+    height: 250x;
+    width: 250px;
 }
 
 /* ALL MEDIA QUERIES AT THE BOTTOM OF THE FILE */
