--- a/styles/custom.css
+++ b/styles/custom.css
@@ -46,7 +46,6 @@ canvas {
     position: relative;
     z-index: 1;
     margin: 0;
-    width: 100vw;
     /* Ensure content starts below the canvas */
     /* Add some padding for better visibility */
 }
@@ -153,8 +152,11 @@ p {
 
 .code-block{
     width: auto;
+    border-width: 3px;
+    border-color: red;
     white-space: pre-wrap;
     word-wrap: break-word;
+    padding-bottom: 1rem;
 }
 
 /* ALL MEDIA QUERIES AT THE BOTTOM OF THE FILE */
@@ -174,9 +176,3 @@ p {
         width: 100%;
     }
 }
-@media only screen and (max-width: 768px) {
-    .code-block {
-        font-size: 2.4vw;
-    }
-}
-
