--- a/styles/custom.css
+++ b/styles/custom.css
@@ -130,6 +130,7 @@ p {
     word-break: normal;
     white-space: normal;
     width: auto;
+    box-sizing: border-box;
 }
 
 .dropdown-content {
@@ -140,7 +141,8 @@ p {
     word-wrap: break-word;
 }
 #projects {
-    width: 80%;
+    padding: 1.5rem;
+    width: 85%;
 }
 
 .profile_picture{
@@ -151,13 +153,28 @@ p {
 }
 
 .code-block{
-    width: auto;
+    width: 100%;
     border-width: 3px;
     border-color: red;
     white-space: pre-wrap;
     word-wrap: break-word;
     padding-bottom: 1rem;
+    margin-right: 1rem;
+    overflow-x: auto;
 }
+
+#email-etl-project {
+    overflow-x: auto; /* Add scrollbars if content overflows */
+    width: 85%;
+    backdrop-filter: blur(5px);
+    border-radius: 8px;
+    background-color: rgba(19, 39, 17, 0.7);
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+    box-sizing: border-box;
+    word-wrap: break-word;
+}
+
 
 /* ALL MEDIA QUERIES AT THE BOTTOM OF THE FILE */
 @media only screen and (max-width: 768px) {
@@ -176,3 +193,9 @@ p {
         width: 100%;
     }
 }
+@media only screen and (max-width: 768px) {
+    #email-etl-project {
+        width: 100%;
+    }
+}
+
