--- a/styles/custom.css
+++ b/styles/custom.css
@@ -198,3 +198,30 @@ p {
     }
 }
 
+@media only screen and (max-width: 1620px) {
+    .code-code {
+        width: 100%;
+        font-size: 0.92em !important;
+    }
+}
+
+@media only screen and (max-width: 1335px) {
+    .code-code {
+        width: 100%;
+        font-size: 0.83em !important;
+    }
+}
+
+@media only screen and (max-width: 1224px) {
+    .code-code {
+        width: 100%;
+        font-size: 0.78em !important;
+    }
+}
+
+@media only screen and (max-width: 1050px) {
+    .code-code {
+        font-size: 0.5em !important;
+    }
+}
+
